--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     />
     <title>הגעת ילדי גן שקמים</title>
     <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
   </head>
   <body>
     <header>
@@ -39,28 +40,28 @@
         <div class="transport" id="walking">
           <div class="transport-way">
             <span>בהליכה</span>
-            <img class="trans-img" src="assets/walk.png" alt="הליכה" />
+            <i class="fas fa-walking trans-icon"></i>
           </div>
           <div class="count">0</div>
         </div>
         <div class="transport" id="car">
           <div class="transport-way">
             <span>במכונית</span>
-            <img class="trans-img" src="assets/car.png" alt="מכונית" />
+            <i class="fas fa-car trans-icon"></i>
           </div>
           <div class="count">0</div>
         </div>
         <div class="transport" id="bus">
           <div class="transport-way">
             <span>באוטובוס</span>
-            <img class="trans-img" src="assets/bus.png" alt="אוטובוס" />
+            <i class="fas fa-bus trans-icon"></i>
           </div>
           <div class="count">0</div>
         </div>
         <div class="transport" id="bicycle">
           <div class="transport-way">
             <span>באופניים</span>
-            <img class="trans-img" src="assets/cycle.png" alt="אופניים" />
+            <i class="fas fa-bicycle trans-icon"></i>
           </div>
           <div class="count">0</div>
         </div>
